2008-12-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* dns.el (dns-set-servers): Check "Address".  Fix typo.

2008-12-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* dns.el (dns-set-servers): Renamed from dns-parse-resolv-conf.  Call
	nslookup if resolv.conf isn't available.
	(dns-query): Rename from query-dns.
	(dns-query-cached): Rename from query-dns-cached.

2008-12-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-set-article-display-arrow): Make
	overlay-arrow-position and overlay-arrow-string buffer-local; no need
	to check if those variables exist (first appeared in Emacs 18.50).

2008-12-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-line-number-at-pos): New function.

	* spam-report.el (spam-report-process-queue): Use it.

2008-12-24  David Engster  <dengste@eml.cc>

	* gnus-sum.el (gnus-summary-set-local-parameters): Don't bind
	parameters that haven't existed as variables as buffer-local variables.

2008-12-23  Dave Love  <fx@gnu.org>

	* legacy-gnus-agent.el (gnus-agent-unlist-expire-days): Don't use
	cadar.

	* sieve-manage.el (sieve-manage-starttls-p): Renamed from
	imap-starttls-p.
	(sieve-manage-starttls-open): Renamed from imap-starttls-open.

2008-12-22  Dave Love  <fx@gnu.org>

	* imap.el: Fix author email.  Doc fixes.
	(imap-parse-body): Work around assertion failure in bogus Exchange 2007
	reply.

2008-12-22  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam-report.el (spam-report-gmane-max-requests): New constant.
	(spam-report-gmane-wait): New variable.
	(spam-report-gmane-ham, spam-report-gmane-spam)
	(spam-report-url-ping-plain, spam-report-process-queue): Wait only if
	spam-report-gmane-wait is non-nil should be sufficient to avoid DOS-ing
	the server.

	* nnheader.el (nnheader-read-timeout, nnheader-accept-process-output):
	Add explanations.

	* pop3.el (pop3-accept-process-output, pop3-read-timeout): Use
	nnheader-accept-process-output and nnheader-read-timeout if available.
	(pop3-movemail): Use it.
